fix(chart): canvas vertical alignment

--- a/styles/web/common/dataviz.less
+++ b/styles/web/common/dataviz.less
@@ -13,6 +13,10 @@
     height: 400px;
 }
 
+.k-chart > canvas {
+    vertical-align: top;
+}
+
 div.k-chart,
 div.k-gauge,
 span.k-sparkline,
